cpu: Store physical ID with core ID when looking up coretemp sensors

If there are multiple CPUs, we would only consider the last CPU.
Additionally, if there is no sensors with a physical ID, we'd never
match any sensors. Now we assume we start at physical ID 0 and only
change that if we encounter a different physical ID sensor.

BUG: 474766


(cherry picked from commit 1dcc0d4a1fb80c3ecd7986012fe6d54bbc3497d4)